--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         </div>
       </div>
       <div class="development">
-        <a href="" class="development__text">Разработка сайта Sok Design</a>
+        <a href="https://vk.com/sok.design" class="development__text">Разработка сайта Sok Design</a>
       </div>
     </footer>
 
