--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <section class="main">
       <header class="main__header">
-          <a href="/" class="main__logo">
+          <a href="" class="main__logo">
             <img src="img/logo.png" alt="">
             <span>Доходный дом</span>
           </a>
