--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="" class="social__link">
               <img src="img/icon1-tel.png" alt="">
             </a>
-            <a href="" class="social__link">
+            <a href="https://vk.com/sok.design" class="social__link">
               <img src="img/icon1-vk.png" alt="">
             </a>
           </div>
@@ -343,7 +343,7 @@
             <a href="" class="social__link  social__link--footer">
               <img src="img/icon1-tel.png" alt="">
             </a>
-            <a href="" class="social__link  social__link--footer">
+            <a href="https://vk.com/sok.design" class="social__link  social__link--footer">
               <img src="img/icon1-vk.png" alt="">
             </a>
           </div>
