--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
               <img src="img/icon1-vk.png" alt="">
             </a>
           </div>
-          <div class="main__phone">
+          <div class="main__phone  main__phone--header">
             <a class="main__tel" href="tel:79169811777"><span>+7 (916) 981-17-77</span><img src="img/icon-phone-mob.png"></a>
             <a href="#callback" id="main__btn" class="btn  btn--call main__btn--header  popup-with-zoom-anim">Перезвоните мне</a>
           </div>
         </header>
       <div class="main__wrapper">
         <h1 class="main__title"><span class="main__title--decor1">Ремонт</span> и деление квартир на <span class="main__title--decor2">студии</span><br> для сдачи в аренду</h1>
-        <p class="main__subtitle">Инвестиции в недвижимость с доходом от 20% годовых уже через 2 месяца,<br>
+        <p class="main__subtitle">Инвестиции в недвижимость с доходом от 20% годовых уже через 2 месяца,
         с помощью нашего выгодного ремонта с нуля под ключ</p>
         <ul class="main__items">
           <li class="main__item  main__item--1">Опыт работы более 3х лет</li>
@@ -44,7 +44,7 @@
           <img src="img/bg-img1.png" alt="">
         </div>
         <div class="main__btn2"> 
-        <a href ="#calculator" class="btn  btn--main">
+        <a href ="#calculator" class="btn  btn--main  btn--scroll">
           Рассчитать стоимость
         </a>
         </div>
@@ -125,8 +125,8 @@
         </div>
         <p class="advantage__text1">Наша компания специализиуется по ремонту квартир под сдачу в аренду и<br>
   способна предоставить качественное решение по выгодным ценам.</p>
-        <p class="advantage__text2">Мы подоберем именно то, что принесет наибольшую выгоду владельцу квартиры.</p>
-        <a href="#calculator" class="btn  btn--main  advantage__btn">Рассчитать стоимость</a>
+        <p class="advantage__text2">Мы подоберем именно то, что принесет наибольшую <span class="advantage__text2--decor">выгоду</span> владельцу квартиры.</p>
+        <a href="#calculator" class="btn  btn--main  btn--scroll advantage__btn">Рассчитать стоимость</a>
       </div>
     </section>
 
@@ -172,37 +172,37 @@
           <div class="why__item">
             <p class="why__num">01</p>
             <h3 class="why__title">Гарантия работ</h3>
-            <p class="why__descr">Заключаем договор, предоставляющий гарантию на все виды наших услуг</p>
+            <p class="why__descr">Заключаем договор,<br>предоставляющий<br> гарантию на все<br> виды наших услуг</p>
           </div>
           <div class="why__item">
             <p class="why__num">02</p>
             <h3 class="why__title">Поэтапная оплата</h3>
-            <p class="why__descr">Оплата работ осуществляется поэтапно, что позволяет не замораживать деньги инвестора</p>
+            <p class="why__descr">Оплата работ осуществляется<br> поэтапно, что позволяет не<br> замораживать деньги<br> инвестора</p>
           </div>
           <div class="why__item">
             <p class="why__num">03</p>
             <h3 class="why__title">Четкие сроки</h3>
-            <p class="why__descr">В 90% случаев заканчиваем работы раньше установленного времени</p>
+            <p class="why__descr">В 90% случаев<br> заканчиваем работы<br> раньше установленного<br> времени</p>
           </div>
           <div class="why__item">
             <p class="why__num">04</p>
             <h3 class="why__title">Фото/видео отчеты</h3>
-            <p class="why__descr">Еженедельно мы будем предоставлять фото и видео отчеты продвижения работы</p>
+            <p class="why__descr">Еженедельно мы будем<br> предоставлять фото и видео<br> отчеты продвижения<br> работы</p>
           </div>
           <div class="why__item  why__item--big">
             <p class="why__num">05</p>
             <h3 class="why__title">Выгода на материалах</h3>
-            <p class="why__descr">Партнерство с крупнейшими строительными магазинами поможет существенно сэкономить на закупке стройматериалов  </p>
+            <p class="why__descr">Партнерство с крупнейшими<br> строительными магазинами<br> поможет существенно<br> сэкономить на закупке<br> стройматериалов  </p>
           </div>
           <div class="why__item  why__item--big">
             <p class="why__num">06</p>
             <h3 class="why__title">Интерьер студии</h3>
-            <p class="why__descr">Мы предоставляем весь комплекс работ: от идеи до расстановки мебели, бытовой техники и аксессуаров</p>
+            <p class="why__descr">Мы предоставляем весь<br> комплекс работ: от идеи<br> до расстановки мебели,<br> бытовой техники<br> и аксессуаров</p>
           </div>
           <div class="why__item  why__item--big">
             <p class="why__num">07</p>
             <h3 class="why__title">Технологии «Умный дом»</h3>
-            <p class="why__descr">Мы оснащаем студии современными технологиями: электронные замки, светильники с датчиками движения, интелектуальные камеры и usb розетки</p>
+            <p class="why__descr">Мы оснащаем студии<br> современными технологиями:<br> электронные замки, светильники с<br> датчиками движения, интелектуальные<br> камеры и usb розетки</p>
           </div>
         </div>
       </div>
@@ -315,9 +315,9 @@
                 <img src="img/logo.png" alt="">
                 <span>Доходный дом</span>
               </a>
-              <p>Адрес: г. Москва, ул. Профсоюзная, дом 128А</p>
+              <p class="contacts__address--address"><span>Адрес: г. Москва,</span> ул. Профсоюзная, дом 128А</p>
               <a href="tel:79169811777">Телефон: +7 (916) 981-17-77</a>
-              <p>График работы: пн-пт с 9:00 до 21:00</p>
+              <p class="contacts__address--time"><span>График работы: пн-пт</span> с 9:00 до 21:00</p>
             </div>
           </div>
         </div>
@@ -335,8 +335,7 @@
             <a href="#politics" class="popup-with-zoom-anim">Политика конфиденциальности</a>
           </div>
         </div>
-        <div class="footer__col2">
-          <div class="main__social  social">
+        <div class="footer__social  social">
             <a href="" class="social__link  social__link--footer">
               <img src="img/icon1-wp.png" alt="">
             </a>
@@ -347,6 +346,7 @@
               <img src="img/icon1-vk.png" alt="">
             </a>
           </div>
+        <div class="footer__col2">
           <div class="main__phone  main__phone--footer">
             <a class="main__tel" href="tel:79169811777">+7 (916) 981-17-77</a>
             <a href="#callback" id="main__btn" class="btn  btn--call main__btn--footer callback popup-with-zoom-anim">Перезвоните мне</a>
@@ -387,12 +387,12 @@
     </form>
   </div>
 
-
+<!---
   <div id="succesform" class="popup popup--success zoom-anim-dialog mfp-hide">
     <p class="title">Отправлено!</p>
     <p class="sub_title">Ожидайте нашего звонка!</p>
   </div>
-
+--->
 
   <div id="politics" class="popup popup--politic zoom-anim-dialog mfp-hide">
         <p class="title">Политика конфиденциальности</p>
