--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a class="main__tel" href="tel:79169811777"><span>+7 (916) 981-17-77</span><img src="img/icon-phone-mob.png"></a>
             <a href="#callback" id="main__btn" class="btn  btn--call main__btn--header  popup-with-zoom-anim">Перезвоните мне</a>
           </div>
-        </header>
+      </header>
       <div class="main__wrapper">
         <h1 class="main__title"><span class="main__title--decor1">Ремонт</span> и деление квартир на <span class="main__title--decor2">студии</span><br> для сдачи в аренду</h1>
         <p class="main__subtitle">Инвестиции в недвижимость с доходом от 20% годовых уже через 2 месяца,
@@ -102,6 +102,13 @@
         </figure>
         <figure class="description__item  description__item--big">
           <img src="img/img7.jpg" alt="">
+          <figcaption>
+            <p class="description__item-title">Декоррирование интерьера</p>
+            <p class="description__item-subtitle">Наши дизайнеры украсят вашу квартиру декором для максимального привлечения арендаторов</p>
+          </figcaption>
+        </figure>
+        <figure class=" description__item  description__item--mob">
+          <img class="description__item--big-img" src="img/img7-mob.jpg" alt="">
           <figcaption>
             <p class="description__item-title">Декоррирование интерьера</p>
             <p class="description__item-subtitle">Наши дизайнеры украсят вашу квартиру декором для максимального привлечения арендаторов</p>
