--- a/thanks.html
+++ b/thanks.html
@@ -8,9 +8,9 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
   </head>
   <body>
-    <section class="main  main--thanks">
+    <section class="main--thanks">
       <header class="main__header">
-          <a href="index.html" class="main__logo">
+          <a href="" class="main__logo">
             <img src="img/logo.png" alt="">
             <span>Доходный дом</span>
           </a>
@@ -25,21 +25,21 @@
               <img src="img/icon1-vk.png" alt="">
             </a>
           </div>
-          <div class="main__phone">
+          <div class="main__phone  main__phone--header">
             <a class="main__tel" href="tel:79169811777"><span>+7 (916) 981-17-77</span><img src="img/icon-phone-mob.png"></a>
             <a href="#callback" id="main__btn" class="btn  btn--call main__btn--header  popup-with-zoom-anim">Перезвоните мне</a>
           </div>
-        </header>
+      </header>
       <div class="main__wrapper">
         <h1 class="main__title"><span class="main__title--decor1">Спасибо</span> за заявку!</h1>
         <p class="main__subtitle">Наш менеджер свяжется в Вами в течение 15 минут</p>
       </div>
-      <div class="main__img  main__img--thanks">
+      <div class="main__img--thanks">
         <img src="img/bg-img1.png" alt="">
       </div>
     </section>
 
-    <footer class="footer footer--thanks">
+    <footer class="footer">
       <div class="footer__wrapper">
         <div class="footer__col">
           <a href="/" class="main__logo  main__logo--footer">
@@ -50,8 +50,7 @@
             <a href="#politics" class="popup-with-zoom-anim">Политика конфиденциальности</a>
           </div>
         </div>
-        <div class="footer__col2">
-          <div class="main__social  social">
+        <div class="footer__social  social">
             <a href="" class="social__link  social__link--footer">
               <img src="img/icon1-wp.png" alt="">
             </a>
@@ -62,6 +61,7 @@
               <img src="img/icon1-vk.png" alt="">
             </a>
           </div>
+        <div class="footer__col2">
           <div class="main__phone  main__phone--footer">
             <a class="main__tel" href="tel:79169811777">+7 (916) 981-17-77</a>
             <a href="#callback" id="main__btn" class="btn  btn--call main__btn--footer callback popup-with-zoom-anim">Перезвоните мне</a>
