--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li class="main__item  main__item--3">Гарантия 6 месяцев</li>
         </ul>
         <div class="main__img--mob">
-          <img src="img/bg-img1.png" alt="">
+          <img src="img/bg-img1-min.png" alt="">
         </div>
         <div class="main__btn2"> 
         <a href ="#calculator" class="btn  btn--main  btn--scroll">
@@ -51,7 +51,7 @@
         <p class="main__descr">Подберем решение под любой бюджет</p>
       </div>
       <div class="main__img">
-        <img src="img/bg-img1.png" alt="">
+        <img src="img/bg-img1-min.png" alt="">
       </div>
     </section>
 
@@ -297,7 +297,7 @@
     <section class="sale">
       <div class="sale__wrapper">
         <a href="#sale" class="callback popup-with-zoom-anim">
-          <img src="img/sale.png" alt="">
+          <img src="img/sale-min.png" alt="">
         </a>
         <!---
         <img src="img/bg2.png" alt="">
