--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <span>Доходный дом</span>
           </a>
           <div class="main__social  social">
-            <a href="" class="social__link">
+            <a href="whatsapp://send?phone=+79169811777" class="social__link">
               <img src="img/icon1-wp.png" alt="">
             </a>
             <a href="" class="social__link">
@@ -343,7 +343,7 @@
           </div>
         </div>
         <div class="footer__social  social">
-            <a href="" class="social__link  social__link--footer">
+            <a href="whatsapp://send?phone=+79169811777" class="social__link  social__link--footer">
               <img src="img/icon1-wp.png" alt="">
             </a>
             <a href="" class="social__link  social__link--footer">
