--- a/thanks.html
+++ b/thanks.html
@@ -15,7 +15,7 @@
             <span>Доходный дом</span>
           </a>
           <div class="main__social  social">
-            <a href="" class="social__link">
+            <a href="whatsapp://send?phone=+79169811777" class="social__link">
               <img src="img/icon1-wp.png" alt="">
             </a>
             <a href="" class="social__link">
@@ -26,7 +26,7 @@
             </a>
           </div>
           <div class="main__phone  main__phone--header">
-            <a class="main__tel" href="tel:79169811777"><span>+7 (916) 981-17-77</span><img src="img/icon-phone-mob.png"></a>
+            <a class="main__tel" href="tel:+79169811777"><span>+7 (916) 981-17-77</span><img src="img/icon-phone-mob.png"></a>
             <a href="#callback" id="main__btn" class="btn  btn--call main__btn--header  popup-with-zoom-anim">Перезвоните мне</a>
           </div>
       </header>
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="footer__social  social">
-            <a href="" class="social__link  social__link--footer">
+           <a href="whatsapp://send?phone=+79169811777" class="social__link social__link--footer">
               <img src="img/icon1-wp.png" alt="">
             </a>
             <a href="" class="social__link  social__link--footer">
